<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/question_image_view"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/image_description" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/answer1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/A_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A_button"/>

        <Button
            android:id="@+id/B_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B_button" />

        <Button
            android:id="@+id/C_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C_button" />

        <Button
            android:id="@+id/D_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pev_button"
            android:drawableLeft="@drawable/arrow_left"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:drawableRight="@drawable/arrow_right"/>
    </LinearLayout>

</LinearLayout>